# eso-addons-updater

./: .gitignore  Cargo.toml  LICENSE  README.md  app.py  app.spec  backend.py  build.cmd  build.sh  func.py  main.py  pyproject.toml  reformat.sh  requirements.txt  rsync.py
.github/workflows/: build.yml
macos/: Info.plist  launcher.sh
qml/: AddonsTab.qml  ChipButton.qml  Divider.qml  ExclusionsTab.qml  InstalledTab.qml  LibrariesTab.qml  LogTab.qml  Theme.js  main.qml
src/: main.rs
