[package]
name = "eso-addons-updater"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
fltk = "1.4"
ureq = "2.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
